2006-01-29  David Hampton  <hampton@employees.org>

	* gnc-tree-model-commodity.c: Andreas Köhler's patch to fix
	commodity editor warnings/crash.

2006-01-29  Joshua Sled  <jsled@asynchronous.org>

	* src/report/utility-reports/welcome-to-gnucash.scm: register
	menu item for self.

	* src/report/report-gnome/report-gnome.scm
	(gnc:report-menu-setup): Remove report menu-item creation.

	* src/gnome/dialog-sxsincelast.c (create_each_transaction_helper):
	Degrade more gracefully in the face of errors during scheduled-transaction
	creation; record errors in-band rather than simply to the log, and
	display them to the user.  Resolves bugs: 151157, 167858, 151487.

2006-01-29  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register.c:
	* src/register/ledger-core/split-register-control.c:
	* src/import-export/hbci/druid-hbci-initial.c:
	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/gnome-utils/gw-gnome-utils-spec.scm:
	* src/gnome-utils/gnc-gui-query.c:
	* src/gnc-ui.h: HIG changes for the "radio option" query dialog.

	* src/engine/gnc-engine.c: Restore reasonable default logging
	levels.

	* README: Michael Wahlbrink's cvs to svn changes.

	* src/import-export/qif-import/dialog-account-picker.c:
	* src/import-export/hbci/gnc-hbci-gettrans.c:
	* src/import-export/hbci/hbci-interaction.c:
	* src/report/report-gnome/window-report.c:
	* src/gnome-utils/gnc-file.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome-search/search-string.c: Use a format string of "%s"
	when building a message dialog from a single string.

	* src/gnome-utils/gnc-main-window.c:
	* src/gnome/gnc-split-reg.c:
	* src/gnome/dialog-commodities.c:
	* src/gnome/dialog-price-edit-db.c: Use the gtk2.6 secondary
	message text function now that there is a 2.4 emulation routine
	available.

	* src/gnome-utils/gncmod-gnome-utils.c:
	* src/app-utils/gnc-err-popup.[ch]:
	* src/app-utils/Makefile.am: Remove deprecated files
